[workspace]
resolver = "2"
members = ["common", "l1-to-l2", "l2", "l2-to-l1"]

# Always optimize; otherwise tests take excessively long.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

[workspace.dependencies]
risc0-zkvm = { git = "https://github.com/risc0/risc0", branch = "main" }
risc0-build = { git = "https://github.com/risc0/risc0", branch = "main" }
op-steel = { path = "../../crates/op-steel" }
risc0-steel = { path = "../../crates/steel" }
risc0-ethereum-contracts =  { path = "../../contracts" }
examples-common = { path = "common" }
