[workspace]
resolver = "2"
members = ["common", "l1-to-l2", "l2", "l2-to-l1"]

[profile.release]
debug = 1
lto = true

[workspace.dependencies]
risc0-zkvm = { git = "https://github.com/risc0/risc0", branch = "release-2.1" }
risc0-build = { git = "https://github.com/risc0/risc0", branch = "release-2.1" }
risc0-op-steel = { path = "../../crates/op-steel" }
risc0-ethereum-contracts = { path = "../../contracts" }
examples-common = { path = "common" }
alloy = "1.0"
