[workspace]
resolver = "2"
members = ["host", "methods"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

[workspace.dependencies]
# Intra-workspace dependencies
risc0-steel = { path = "../../steel" }

# risc0 monorepo dependencies.
risc0-build = { version = "1.0.3" }
risc0-zkvm = { version = "1.0.3" }
risc0-zkp = { version = "1.0.3" }

alloy = { git = "https://github.com/alloy-rs/alloy.git", rev = "067cc464bd1357e745653709db051707b949cc6b", features = [
    "full",
] }
alloy-primitives = { version = "0.7", features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.7" }
anyhow = { version = "1.0.75" }
log = { version = "0.4" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.39", features = ["full"] }
