[workspace]
resolver = "2"
members = ["core", "host", "methods"]

[workspace.dependencies]
alloy-primitives = { version = "0.7", features = ["serde", "rlp", "std"] }
alloy-rlp = { version = "0.3", default-features = false }
alloy-rlp-derive = { version = "0.3", default-features = false }
alloy-sol-types = { version = "0.7" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
ethers-core = "2.0"
ethers-providers = "2.0"
log = "0.4"
methods = { path = "methods" }
nybbles = { version = "0.2.1", features = ["serde"] }
once_cell = "1.19"
risc0-steel = { path = "../../steel" }
risc0-zkvm = { git = "https://github.com/risc0/risc0", branch = "main", default-features = false }
rlp = "0.5.2"
serde = "1.0"
thiserror = "1.0"
tokio = { version = "1.35" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
