[workspace]
resolver = "2"
members = ["core", "host", "methods"]

[workspace.dependencies]
# Intra-workspace dependencies
risc0-steel = { path = "../../crates/steel" }

# risc0 monorepo dependencies.
risc0-build = { version = "2.1" }
risc0-zkvm = { version = "2.1" }
risc0-zkp = { version = "2.0", default-features = false }

alloy-primitives = { version = "1.0", features = ["serde", "rlp", "std"] }
alloy-rlp = { version = "0.3", default-features = false }
alloy-rlp-derive = { version = "0.3", default-features = false }
alloy-sol-types = { version = "1.0" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
log = "0.4"
token-stats-core = { path = "core" }
token-stats-methods = { path = "methods" }
once_cell = "1.19"
serde = "1.0"
thiserror = "2.0"
tokio = { version = "1.35", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5" }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
