[package]
name = "set-builder"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-aggregation = { version = "0.1.0", path = "../..", default-features = false }
risc0-zkvm = { git = "https://github.com/risc0/risc0", rev = "f74920596c745a8bb7e8a6f1dfdefb44d03ed06f", default-features = false, features = ["std"] }
