[package]
name = "guest-set-builder"
resolver = "2"
version = "0.7.0"
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
risc0-aggregation = { path = ".." }
risc0-zkvm = { workspace = true, default-features = true }

[build-dependencies]
risc0-build = { workspace = true }
risc0-build-ethereum = { workspace = true }

[package.metadata.risc0]
methods = ["set-builder"]
