[package]
name = "apps"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy = { version = "0.2", features = ["full"] }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = { version = "0.10" }
hex = { workspace = true }
log = { workspace = true }
governance-methods = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }
tokio = { workspace = true, features = ["full"]}
tracing-subscriber = { workspace = true }
url = {workspace = true}

