[package]
name = "l2"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { workspace = true, features = ["full"] }
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive", "env"] }
examples-common = { workspace = true, optional = true }
l2-core = { path = "core" }
l2-methods = { path = "methods" }
log = "0.4"
risc0-op-steel = { workspace = true, features = ["host"] }
risc0-zkvm = { workspace = true }
tokio = { version = "1.40", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[features]
verify = ["dep:examples-common"]
