[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { workspace = true, features = ["node-bindings"] }
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
log ={ workspace = true }
methods = { path = "../methods" }
risc0-steel = { workspace = true, features = ["host"] }
risc0-zkvm = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
